# pdf-quality-report

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: how_to_export_chunk_records.md  how_to_export_chunk_review_markdown.md  how_to_export_clean_markdown.md  how_to_export_review_bundle.md  how_to_export_review_findings.md  sample_report.html
docs/portfolio/: README.md  sample_report_portfolio.html
examples/mdpi_pdf_elements/: SOURCE.md
examples/mdpi_pdf_elements/page_006/: normalized_blocks.json  quality_report.md
examples/mdpi_pdf_elements/page_012/: normalized_blocks.json  quality_report.md
src/pdf_quality_report/: __init__.py  checks.py  chunk.py  chunk_review.py  convert.py  interpret.py  models.py  report.py  review_bundle.py  review_findings.py  to_markdown.py
tests/: test_chunk.py  test_chunk_review.py  test_convert.py  test_interpret.py  test_quality_report.py  test_review_bundle.py  test_review_findings.py  test_to_markdown.py
